syntax = "proto3";

import "common.proto";

package client;

service Client {
  rpc Create (ClientRequest) returns (ClientRequest) {};
  rpc FindOne(ClientRequest) returns (ClientRequest) {};
  rpc FindAll (common.Empty) returns (ClientListRequest) {};
  rpc Update (ClientRequest) returns (ClientRequest) {};
  rpc Destroy (ClientRequest) returns (ClientRequest) {};
}

message ClientRequest {
  string id = 1;
  string user_id = 2;
  string client_id = 3;
  string client_secret = 4;
  string redirect_uri = 5;
  string name = 6;
  string description = 7;
  string type = 8;
  string homepage_url = 9;
  string logo_url = 10;
  string created_at = 11;
  string updated_at = 12;
}

message ClientListRequest {
  repeated ClientRequest clients = 1;
}
